--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "@nuxtjs/svg": "^0.1.12",
     "@nuxtjs/tailwindcss": "^4.0.3",
     "animated-number-vue": "^1.0.0",
+    "animejs": "^3.2.1",
     "cookie-universal-nuxt": "^2.1.4",
     "core-js": "^3.9.1",
+    "gsap": "^2.1.3",
     "nuxt": "^2.15.3",
     "nuxt-i18n": "^6.24.0",
     "nuxt-socket-io": "^1.1.17",
+    "pixi.js": "^6.2.1",
     "tailwindcss": "^2.1.1",
     "tailwindcss-filters": "^3.0.0",
     "tailwindcss-important": "^1.0.0",
